--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="sticky"><nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
         <li class="name">
-          <h1><a href="<%= root_url %>"><span class="alt">Demagog.cz </span><%= image_tag("logo.png", alt: "Demagog.cz") %></a></h1>
+          <h1><a href="<%= root_url %>"><span class="alt">Demagog.cz </span><%= image_tag("demagog-logo.svg", alt: "Demagog.cz") %></a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
@@ -63,7 +63,7 @@
     <div class="medium-5 columns">
         <a href="<%= root_url %>">
           <h1>Demagog.cz</h1>
-          <%= image_tag("logo.png", alt: "Demagog.cz") %>
+          <%= image_tag("demagog-logo.svg", alt: "Demagog.cz") %>
         </a>
     </div>
 </header>
