--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -18,6 +18,7 @@ $faded: #fff;
 @import "settings";
 @import "foundation";
 
+@import "veracity";
 @import "general";
 @import "article";
 @import "statement";
