--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
                     <img class="lazy-load" data-src="<%= asset_path("partners/osf_praha_cz.png") %>" />
                 </a>
                 <a title="Náš stát.cz" href="http://nasstat.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/nas-stat-banner.jpg") %>" />
+                    <img class="lazy-load" data-src="<%= asset_path("partners/nas-stat-banner.png") %>" />
                 </a>
                 <a title="Jde o Evropu" href="http://europa.eu/citizens-2014">
                     <img class="lazy-load" data-src="<%= asset_path("partners/jde-o-evropu.png") %>" />
@@ -17,13 +17,13 @@
                 </a>
                 <br>
                 <a title="Program Mládež v akci" href="http://mladezvakci.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/mladez-v-akci.jpg") %>" />
+                    <img class="lazy-load" data-src="<%= asset_path("partners/mladez-v-akci.png") %>" />
                 </a>
                 <a title="Zastoupení Evropské komise v ČR" href="http://ec.europa.eu/ceskarepublika/index_cs.htm">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_rep_cz_fullcolor.jpg") %>" />
+                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_rep_cz_fullcolor.png") %>" />
                 </a>
                 <a title="Fakulta sociálních studií MU" href="http://www.fss.muni.cz">
-                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_fss.jpg") %>" />
+                    <img class="lazy-load" data-src="<%= asset_path("partners/logo_fss.png") %>" />
                 </a>
                 <a title="Zákony pro lidi" href="http://www.zakonyprolidi.cz">
                     <img class="lazy-load" data-src="<%= asset_path("partners/z4-logo-32.png") %>" />
