Minor fixes and color changes

--- a/app/assets/stylesheets/_article.scss
+++ b/app/assets/stylesheets/_article.scss
@@ -62,8 +62,8 @@ article.preview {
     margin-top: 0;
   }
   .label {
-    &.default { background-color: $untrue; }
-    &.static { background-color: $unverifiable; }
+    &.default { background-color: $blue; }
+    &.static { background-color: $orange; }
   }
 }
 
