--- a/app/assets/stylesheets/_speaker.scss
+++ b/app/assets/stylesheets/_speaker.scss
@@ -2,13 +2,13 @@
   display: inline-block;
   background: #eee;
 
-  -webkit-border-radius: 15%;
-  border-radius: 15%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
   width: 100px;
   height: 100px;
   overflow: hidden;
   margin: 3px;
-  box-shadow: 0 0 2px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 0px 2px $black;
 
   img {
     width: 100%;
@@ -25,7 +25,7 @@
   .name {
     margin-top: 0;
     clear: right;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 24px;
     font-weight: bold;
   }
