--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -1,6 +1,6 @@
 <article class="row statement s-speaker-statement">
-  <div class="large-2 large-push-7 columns">
-    <% unless local_assigns[:non_attributed] %>
+  <div class="large-7 medium-10 columns" id="<%= statement.id %>">
+     <% unless local_assigns[:non_attributed] %>
       <figure class="speaker">
         <a href="<%= speaker_path(statement.speaker.id) %>">
           <div class="photo-wrapper">
@@ -10,11 +10,8 @@
           </div>
         </a>
       </figure>
-    <% else %>
-        &nbsp;
     <% end %>
-  </div>
-  <div class="large-7 large-pull-2 medium-10 columns" id="<%= statement.id %>">
+
     <% if statement.important? %>
       <span class="label secondary">důležitý výrok</span>
     <% end %>
@@ -25,10 +22,11 @@
     </p>
 
     <div class="reasons <% unless statement.important? %>hidden<% end %>">
-      <p class="veracity glyphicons <%= statement.correct_assessment.veracity.default_name %>"><span class="glyphicons"><i></i></span> <%= statement.correct_assessment.veracity.name %></p>
+      <p class="veracity <%= statement.correct_assessment.veracity.default_name %>">
+        <%= statement.correct_assessment.veracity.name %></p>
       <a class="show-reasons" href="#">zobrazit odůvodnění</a>
+      <a class="permalink" href="<%= statement_path(statement.id) %>">sdílet výrok</a>
       <div class="explanation"><%= raw(statement.correct_assessment.explanation) %></div>
-      <a class="permalink" href="<%= statement_path(statement.id) %>"><span class="glyphicons glyphiconsExtra share"><i></i></span> sdílet výrok</a>
     </div>
   </div>
   <div class="columns"></div>
