--- a/app/assets/stylesheets/_statement.scss
+++ b/app/assets/stylesheets/_statement.scss
@@ -13,7 +13,7 @@
 }
 
 .row.statement {
-  margin-top: 50px;
+  margin-bottom: 40px;
   overflow: hidden;
 
   figure.speaker {
@@ -33,9 +33,8 @@
   }
 
   .quote {
-    font-size: 120%;
-    letter-spacing: 0.1em;
-    margin-bottom: 0;
+    letter-spacing: 0.05em;
+    margin-bottom: 0.5em;
     
     b {
       font-style: normal;
@@ -44,17 +43,25 @@
     }
   }
   
-  .permalink {
-    color: #666;
-    margin-top: 5px;
-    padding: 6px 5px 7px;
-    display: inline-block
+  .permalink, .show-reasons {
+    display: inline-block;
+    margin-left: 1em;
   }
 
-  .show-reasons {
-    margin-top: 5px;
-    padding: 6px 5px 7px;
-    display: inline-block;
+  .permalink {
+    color: #666;
+
+    &::after {
+      content: '';
+      display: inline-block;
+      background-repeat: no-repeat;
+      background-image: image-url('share.svg');
+      background-position: 50% 50%;
+      background-size: contain;
+      width: 2em;
+      height: 1em;
+      margin-bottom: -2px;
+    }
   }
 
   .reasons {
@@ -72,11 +79,10 @@
     }
 
     .veracity {
-      font-size: 140%;
+      font-size: 120%;
       font-weight: bold;
       float: left;
-      margin-right: 12px;
-      padding: 9px 0px 7px 0;
+      margin-bottom: 0.75rem;
     }
 
     table {
@@ -105,15 +111,24 @@
 
 
 .interesting-statements {
-  
+  @include inverted;
+  padding: 20px 0 40px;
+  margin: 20px 0 60px;
+
   .statement {
-    margin-top: 0;
+    margin-top: 1em;
+    margin-bottom: 1em;
+
+    .veracity {
+      @include veracity(0.8);
+      margin-left: 0.1em;
+    }
   }
   .name a {
     display: inline;
   }
   p {
-    font-size: .9em;
+    font-size: rem-calc(14);
     margin: 0;
   }
   .photo-wrapper {
