--- a/app/assets/stylesheets/_veracity.scss
+++ b/app/assets/stylesheets/_veracity.scss
@@ -1,4 +1,10 @@
 @mixin veracity($size: 1) {
+  text-transform: uppercase;
+  font-size: 90%;
+  margin-left: -0.1em;
+  white-space: nowrap;
+  font-weight: bold;
+
   &::before {
     content: '';
     display: inline-block;
@@ -11,7 +17,7 @@
     background-color: red;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    background-size: 0.7em 0.7em;
+    background-size: ($size * 0.7em) ($size * 0.7em);
   }
 
   &.true {
@@ -21,7 +27,7 @@
       background-color: $true;
       background-image: image-url('true-symbol.svg');
       background-position: 48% 55%;
-      background-size: 0.7em 0.7em;
+      background-size: ($size * 0.7em) ($size * 0.7em);
     }
   }
 
@@ -32,7 +38,7 @@
       background-color: $untrue;
       background-image: image-url('untrue-symbol.svg');
       background-position: 50% 55%;
-      background-size: 0.6em 0.6em;
+      background-size: ($size * 0.6em) ($size * 0.6em);
     }
   }
 
