--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -19,6 +19,8 @@ $faded: #fff;
 @import "foundation";
 
 @import "veracity";
+@import "inverted";
+
 @import "general";
 @import "article";
 @import "statement";
