--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,5 @@
-<div class="sticky row"><nav class="top-bar" data-topbar role="navigation">
+<div class="row">
+  <div class="sticky"><nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
         <li class="name">
           <h1><a href="<%= root_url %>"><span class="alt">Demagog.cz </span><%= image_tag("demagog-logo-sub.svg", alt: "Demagog.cz") %></a></h1>
@@ -19,7 +20,7 @@
             <li class="has-dropdown">
               <a>Speciály</a>
               <ul class="dropdown">
-                <!-- <li><a href="https://extra.demagog.cz/sliby-milose-zemana/">Vládní sliby 2014—17</a></li> -->
+                <li><a href="https://extra.demagog.cz/sliby-milose-zemana/">Vládní sliby 2014—17</a></li>
                 <li><a href="https://extra.demagog.cz/sliby-milose-zemana/">Sliby Miloše Zemana</a></li>
               </ul>
             </li>
@@ -57,4 +58,5 @@
             </li>
         </ul>
     </section>
-</nav></div>
+  </nav></div>
+</div>
