--- a/app/views/homepage/_interesting_statements.html.erb
+++ b/app/views/homepage/_interesting_statements.html.erb
@@ -1,6 +1,6 @@
 <section class="interesting-statements show-for-medium-up">
   <div class="row">
-    <div class="large-8 columns">
+    <div class="large-8 medium-6 columns">
       <h2>Vybrané výroky z posledních debat</h2>
 
       <div class="row">
@@ -12,7 +12,7 @@
         <% end %>
       </div>
     </div>
-    <div class="large-4 columns">
+    <div class="large-4 medium-6 columns">
       <h2 style="margin:0">&nbsp;</h2>
       <div data-darujme-widget-token="cal3h1ohu4dkri5u">&nbsp;</div>
       <script type="text/javascript">
