--- a/app/assets/stylesheets/frontend.scss
+++ b/app/assets/stylesheets/frontend.scss
@@ -12,11 +12,15 @@
 @import "speaker";
 
 // identify & remove
-.explanation {
+.explanation, .editorial {
   clear: left;
 
   &, & font, & div, & span, & li {
     font-size: 1em !important; line-height: 1.6em !important;
+  }
+
+  * {
+    font-family: Lato, sans-serif;
   }
 
   br { display: none; }
