--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
     <%= yield %>
 
     <%= render partial: "shared/footer" %>
-
     <%= javascript_pack_tag 'application'  %>
+    <%= render partial: "shared/ga" %>
   </body>
 </html>
 </body>
