Text at the most active speaker's list

--- a/app/views/speaker/index.html.erb
+++ b/app/views/speaker/index.html.erb
@@ -12,7 +12,8 @@
         <% end %>
       </div>
     <% else %>
-      <h2>Řečníci s nejvíce výroky</h2>
+      <h2>Politici s nejvíce výroky</h2>
+      <p>Vybráni jsou nejaktivnější politici za posledních šest měsíců.</p>
 
       <div class="row">
         <% @speakers.each do |speaker| %>
